<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/resultLayout"
    android:useDefaultMargins="false"
    android:columnCount="6"
    android:rowCount="1"
    >
    <TextView
        android:text="@string/tbl_c1"
        android:id="@+id/tbl_c1"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:textSize="8dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_width="30dp"
        />
    <TextView
        android:text="@string/tbl_c10"
        android:id="@+id/tbl_c10"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:textSize="8dp"
        android:layout_column="1"
        android:layout_row="0"
        android:layout_width="40dp"
        />
    <TextView
        android:text="@string/tbl_c2"
        android:id="@+id/tbl_c2"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:layout_columnWeight="2"
        android:textSize="8dp"
        android:layout_column="2"
        android:layout_width="80dp"
        android:layout_row="0"
        />
    <TextView
        android:text="@string/tbl_c3"
        android:id="@+id/tbl_c3"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:textSize="8dp"
        android:layout_column="3"
        android:layout_row="0"
        android:layout_width="50dp"
        />
    <TextView
        android:text="@string/tbl_c4"
        android:id="@+id/tbl_c4"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:textSize="8dp"
        android:layout_column="4"
        android:layout_row="0"
        android:layout_width="80dp"
        />
    <TextView
        android:text="@string/tbl_c5"
        android:id="@+id/tbl_c5"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center_horizontal|center"
        android:textSize="8dp"
        android:layout_width="30dp"
        android:layout_column="5"
        android:layout_row="0"
        />
</GridLayout>