<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/headerLayout"
    android:columnCount="6"
    android:rowCount="7"
    >
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c1"
        android:id="@+id/tbl_c1"
        android:layout_gravity="center_vertical|center"
        android:textSize="8dp"
        android:layout_column="0"
        android:layout_row="0"
        android:onClick="sortBy"
        android:layout_width="30dp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:singleLine="false" />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c10"
        android:id="@+id/tbl_c10"
        android:layout_gravity="center_vertical|center"
        android:textSize="8dp"
        android:layout_column="1"
        android:layout_row="0"
        android:onClick="sortBy"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_width="40dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c2"
        android:id="@+id/tbl_c2"
        android:layout_gravity="center_vertical|center"
        android:textSize="8sp"
        android:layout_column="2"
        android:layout_row="0"
        android:layout_width="100dp"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:onClick="sortBy"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c3"
        android:id="@+id/tbl_c3"
        android:layout_gravity="center_vertical|center"
        android:textSize="8sp"
        android:layout_column="3"
        android:layout_row="0"
        android:onClick="sortBy"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_width="50dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c4"
        android:id="@+id/tbl_c4"
        android:layout_gravity="center_vertical|center"
        android:textSize="8sp"
        android:layout_column="4"
        android:layout_row="0"
        android:onClick="sortBy"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_width="70dp"
        />
    <Button
        style="?android:attr/buttonStyleSmall"
        android:text="@string/tbl_c5"
        android:id="@+id/tbl_c5"
        android:layout_gravity="center_vertical|center"
        android:textSize="8sp"
        android:layout_column="5"
        android:layout_row="0"
        android:onClick="sortBy"
        android:padding="0dp"
        android:layout_margin="0dp"
        android:layout_width="50dp"
        />
</GridLayout>