<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/buttonLayout">
    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_settings"
        android:id="@+id/menu"
        android:layout_alignParentRight="true"
        android:onClick="openSettingsView"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_filter"
            android:id="@+id/filter"
            android:onClick="openFilterView"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_refresh"
            android:id="@+id/refresh"
            android:onClick="updateData"/>
    </LinearLayout>


</RelativeLayout>
<TextView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/title"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:gravity="center_vertical|center"
    android:textSize="20dp"
    android:background="#7fff00"
    android:id="@+id/title"
    android:layout_below="@+id/buttonLayout"
    />
<include layout="@layout/header_layout"
    android:layout_below="@+id/title"
    android:layout_height="30dp"
    android:layout_width="fill_parent"
    />
<ListView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/searchView"
    android:layout_below="@+id/headerLayout"
    android:layout="@layout/notice_layout">
</ListView>
<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="Title Button"-->
<!--android:id="@+id/titlebutton"/>-->
<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="Description"-->
<!--android:id="@+id/descbutton"-->
<!--android:layout_below="@+id/titlebutton"/>-->
<!--<Button-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:text="Logo"-->
<!--android:id="@+id/logobutton"-->
<!--android:layout_below="@+id/descbutton"/>-->
<!--<TextView-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/titletxt"-->
<!--android:layout_below="@+id/logobutton"/>-->
<!--<TextView-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/desctxt"-->
<!--android:layout_below="@+id/titletxt"/>-->
<!--<ImageView-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content"-->
<!--android:id="@+id/logo"-->
<!--android:layout_below="@+id/desctxt"/>-->

</RelativeLayout>
